--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,25 @@
-span {
-    margin: 0px 2px;
-}
-
-article {
-    border: solid 1px;
-    border-radius: 5px;
-    margin: 5px;
-    max-width: 350px;
-    box-sizing: border-box;
-    padding: 5px;
-}
+body {
+    font-family: Arial, sans-serif;
+  }
+  
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+    background-color: #333;
+    padding: 10px;
+  }
+  
+  .navbar a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .navbar a.active {
+    font-weight: bold;
+  }
+  
+  h1 {
+    text-align: center;
+    margin: 20px 0;
+  }
+  
